--- a/templates/logscale.ngnix.conf.j2
+++ b/templates/logscale.ngnix.conf.j2
@@ -9,7 +9,7 @@ upstream logscaleui {
 
 server {
     listen 80;
-    server_name ec2-44-200-157-191.compute-1.amazonaws.com;
+    server_name {{  }};
 
 
     access_log /var/log/nginx/access.log main;
